syntax = "proto3";

package proto;

option go_package = "proto/";

/*-CUSTOMER-----------------------------------------------------------------------------------------------------------------------*/
message Customer {
    string first_name = 1;
    string last_name = 2;
}
/*--------------------------------------------------------------------------------------------------------------------------------*/

/*-PRODUCT------------------------------------------------------------------------------------------------------------------------*/
message Product {
    string name = 1;    
    float price = 2;
    string description = 3;
}

message ProductRequest {
    Product product = 1;
}

message ProductResponse{
    int32 id = 1;
    Product product = 2;
    string created_at = 3;
    string deleted_at = 4;
}
/*--------------------------------------------------------------------------------------------------------------------------------*/

/*-BILL---------------------------------------------------------------------------------------------------------------------------*/
message Bill{
    Customer customer = 1;
    repeated Product listOfProducts = 2;   
}

message BillRequest{
    Bill bill= 1;
}

message BillResponse{
    int32 id = 1; 
    Bill bill = 2;
    float total = 3;
    string created_at = 4;
    string deleted_at = 5;
}
/*--------------------------------------------------------------------------------------------------------------------------------*/

/*-SERVICE------------------------------------------------------------------------------------------------------------------------*/
service shopManagementService{
    //unary services
    rpc GenerateBill(BillRequest) returns (BillResponse) {};
    rpc AddProduct(ProductRequest) returns (ProductResponse) {};
}
/*--------------------------------------------------------------------------------------------------------------------------------*/
